# src/CSharp/EasyMicroservices.ContentsMicroservice.Domain/Contracts/Requests/IsKeyExistRequestContract.cs
@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace EasyMicroservices.ContentsMicroservice.Contracts.Requests
+{
+    public class IsKeyExistRequestContract
+    {
+        public string Key { get; set; }
+    }
+}
